[package]
name = "sol-trade-sdk"
version = "3.3.6"
edition = "2021"
authors = [
    "William <byteblock6@gmail.com>",
    "sgxiang <sgxiang@gmail.com>",
    "wei <1415121722@qq.com>",
]
repository = "https://github.com/0xfnzero/sol-trade-sdk"
description = "Rust SDK to interact with the dex trade Solana program."
license = "MIT"
keywords = ["solana", "memecoins", "pumpfun", "pumpswap", "raydium"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
perf-trace = []

[dependencies]
sol-common = { path = "../sol-common" }
solana-streamer = { path = "../solana-streamer" }

solana-sdk = {workspace = true}
solana-program = {workspace = true}
solana-client = {workspace = true}
solana-rpc-client = {workspace = true}

solana-rpc-client-api = "3.0.8"
solana-transaction-status = "3.0.8"
solana-account-decoder = "3.0.8"
solana-hash = "3.0.0"
solana-entry = "3.0.8"
solana-rpc-client-nonce-utils = "3.0.8"
solana-perf = "3.0.8"
solana-metrics = "3.0.8"
solana-nonce = "3.0.0"
solana-address-lookup-table-interface = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-commitment-config = { workspace = true }
solana-transaction-status-client-types = "3.0.0"
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-tls-utils = "3.0.8"

spl-token-2022 = {workspace = true}

borsh = { version = "1.5.3", features = ["derive"] }
isahc = "1.7.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.134"
futures = "0.3.31"
futures-util = "0.3.31"
base64 = "0.22.1"
bs58 = "0.5.1"
rand = "0.9.0"
bincode = "1.3.3"
anyhow = "1.0.90"
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.42.0" , features = ["full", "rt-multi-thread"]}
tonic = { version = "0.14.2", features = ["transport"] }
rustls = { version = "0.23.23", features = ["ring"] }
rustls-native-certs = "0.8.1"
tokio-rustls = "0.26.1"
core_affinity = "0.8"
log = "0.4.22"
chrono = "0.4.39"
regex = "1"
tracing = "0.1.41"
thiserror = "2.0.11"
async-trait = "0.1.86"
lazy_static = "1.5.0"
once_cell = "1.20.3"
prost = "0.14.1"
prost-types = "0.14.1"
num_enum = "0.7.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
hex = "0.4.3"
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
borsh-derive = "1.5.5"
indicatif = "0.18.0"
fnv = "1.0.7"
dashmap = "6.1.0"
clru = "0.6"
smallvec = "1.15.1"
parking_lot = "0.12"
arc-swap = "1.7"
sha2 = "0.10"
tonic-prost = "0.14.2"
uint = "0.10.0"
quinn = {version = "0.11", default-features = false, features = ["rustls"]}

# Performance optimization dependencies
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
memmap2 = "0.9"
num_cpus = "1.16"
libc = "0.2"
ruint = "1.17.0"
num-integer = "0.1.46"